--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cluster": "0.7.x",
     "fluent-logger": "0.1.x",
     "knox": "0.3.x",
+    "lodash": "^4.17.4",
     "measured": "0.1.x",
     "node-uuid": "1.3.x",
     "vero": "github:hubdoc/vero-node"
